<resources>

    <string name="app_name">PromoTestApp</string>

    <string name="action_slideshow_interval">Slideshow interval</string>
    <string name="action_animation_duration">Animation duration</string>
    <string name="action_clock_settings">Clock settings</string>
    <string name="action_clock_display">Display</string>
    <string name="action_clock_elevation">Clock elevation</string>
    <string name="action_clock_opacity">Clock opacity</string>

    <string name="apply">apply</string>
    <string name="cancel">cancel</string>

    <plurals name="slideshow_interval_value">
        <item quantity="zero">%1$d seconds</item>
        <item quantity="one">%1$d second</item>
        <item quantity="other">%1$d seconds</item>
    </plurals>

    <plurals name="animation_duration_value">
        <item quantity="zero">%1$d milliseconds</item>
        <item quantity="one">%1$d millisecond</item>
        <item quantity="other">%1$d milliseconds</item>
    </plurals>

    <plurals name="clock_elevation_value">
        <item quantity="other">%1$d dip</item>
    </plurals>

    <plurals name="clock_opacity_value">
        <item quantity="other">%1$d%%</item>
    </plurals>

</resources>