<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ly.slide.promo.testapp.promotestapp.MainActivity">

    <item
        android:id="@+id/action_slideshow_interval"
        android:title="@string/action_slideshow_interval" />

    <item
        android:id="@+id/action_animation_duration"
        android:title="@string/action_animation_duration" />

    <item android:title="@string/action_clock_settings">
        <menu>
            <item
                android:id="@+id/action_clock_display"
                android:checkable="true"
                android:checked="true"
                android:title="@string/action_clock_display" />

            <item
                android:id="@+id/action_clock_elevation"
                android:title="@string/action_clock_elevation" />

            <item
                android:id="@+id/action_clock_opacity"
                android:title="@string/action_clock_opacity" />


        </menu>
    </item>
</menu>
